Approaching quarto-look

--- a/pcgrr/inst/templates/bibliography.bib
+++ b/pcgrr/inst/templates/bibliography.bib
@@ -502,3 +502,91 @@
   language = "en"
 }
 
+@ARTICLE{Nakken2018-lb,
+   title    = "Personal Cancer Genome Reporter: variant interpretation report
+               for precision oncology",
+   author   = "Nakken, Sigve and Fournous, Ghislain and Vod{\'a}k, Daniel and
+               Aasheim, Lars Birger and Myklebost, Ola and Hovig, Eivind",
+   journal  = "Bioinformatics",
+   volume   =  34,
+   number   =  10,
+   pages    = "1778-1780",
+   month    =  may,
+   year     =  2018,
+   url      = "http://dx.doi.org/10.1093/bioinformatics/btx817",
+   language = "en"
+ }
+
+@ARTICLE{Brady2022-hr,
+   title    = "Therapeutic and prognostic insights from the analysis of cancer
+               mutational signatures",
+   author   = "Brady, Samuel W and Gout, Alexander M and Zhang, Jinghui",
+   journal  = "Trends Genet.",
+   volume   =  38,
+   number   =  2,
+   pages    = "194-208",
+   month    =  feb,
+   year     =  2022,
+   url      = "http://dx.doi.org/10.1016/j.tig.2021.08.007",
+   language = "en"
+ }
+
+@ARTICLE{Levatic2022-hk,
+   title    = "Mutational signatures are markers of drug sensitivity of cancer
+               cells",
+   author   = "Levati{\'c}, Jurica and Salvadores, Marina and Fuster-Tormo,
+               Francisco and Supek, Fran",
+   journal  = "Nat. Commun.",
+   volume   =  13,
+   number   =  1,
+   pages    = "2926",
+   month    =  may,
+   year     =  2022,
+   url      = "http://dx.doi.org/10.1038/s41467-022-30582-3",
+   language = "en"
+ }
+
+@ARTICLE{Horak2022-uh,
+   title    = "Standards for the classification of pathogenicity of somatic
+               variants in cancer (oncogenicity): Joint recommendations of
+               Clinical Genome Resource ({ClinGen)}, Cancer Genomics Consortium
+               ({CGC)}, and Variant Interpretation for Cancer Consortium
+               ({VICC})",
+   author   = "Horak, Peter and Griffith, Malachi and Danos, Arpad M and Pitel,
+               Beth A and Madhavan, Subha and Liu, Xuelu and Chow, Cynthia and
+               Williams, Heather and Carmody, Leigh and Barrow-Laing, Lisa and
+               Rieke, Damian and Kreutzfeldt, Simon and Stenzinger, Albrecht and
+               Tamborero, David and Benary, Manuela and Rajagopal, Padma Sheila
+               and Ida, Cristiane M and Lesmana, Harry and Satgunaseelan,
+               Laveniya and Merker, Jason D and Tolstorukov, Michael Y and
+               Campregher, Paulo Vidal and Warner, Jeremy L and Rao, Shruti and
+               Natesan, Maya and Shen, Haolin and Venstrom, Jeffrey and Roy,
+               Somak and Tao, Kayoko and Kanagal-Shamanna, Rashmi and Xu, Xinjie
+               and Ritter, Deborah I and Pagel, Kym and Krysiak, Kilannin and
+               Dubuc, Adrian and Akkari, Yassmine M and Li, Xuan Shirley and
+               Lee, Jennifer and King, Ian and Raca, Gordana and Wagner, Alex H
+               and Li, Marylin M and Plon, Sharon E and Kulkarni, Shashikant and
+               Griffith, Obi L and Chakravarty, Debyani and Sonkin, Dmitriy",
+   journal  = "Genet. Med.",
+   month    =  jan,
+   year     =  2022,
+   url      = "http://dx.doi.org/10.1016/j.gim.2022.01.001",
+   language = "en"
+ }
+
+@ARTICLE{Nakken2023-ol,
+   title    = "Comprehensive interrogation of gene lists from genome-scale
+               cancer screens with {oncoEnrichR}",
+   author   = "Nakken, Sigve and Gundersen, Sveinung and Bernal, Fabian L M and
+               Polychronopoulos, Dimitris and Hovig, Eivind and Wesche,
+               J{\o}rgen",
+   journal  = "Int. J. Cancer",
+   volume   =  153,
+   number   =  10,
+   pages    = "1819-1828",
+   month    =  nov,
+   year     =  2023,
+   url      = "http://dx.doi.org/10.1002/ijc.34666",
+   language = "en"
+ }
+
