--- a/pcgrr/inst/templates/pcgr_quarto_report/msi.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/msi.qmd
@@ -1,38 +1,89 @@
 ## MSI status
 
-Microsatellite instability (MSI) is the result of impaired DNA mismatch repair and constitutes a cellular phenotype of clinical significance in many cancer types, most prominently colorectal cancers, stomach cancers, endometrial cancers, and ovarian cancers ([Cortes-Ciriano et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/28585546)). We have built a statistical MSI classifier from somatic mutation profiles that separates _MSI.H_ (MSI-high) from _MSS_ (MS stable) tumors. The MSI classifier was trained using 999 exome-sequenced TCGA tumor samples with known MSI status (i.e. assayed from mononucleotide markers), and obtained a [positive predictive value](https://en.wikipedia.org/wiki/Positive_and_negative_predictive_values#Positive_predictive_value) of 98.9% and a [negative predictive value](https://en.wikipedia.org/wiki/Positive_and_negative_predictive_values#Negative_predictive_value) of 98.8% on an independent test set of 427 samples. Details of the MSI classification approach can be found <a href="http://rpubs.com/sigven/msi_classification_v3" target="_blank">here</a>.
+Microsatellite instability (MSI) is the result of impaired DNA mismatch repair and constitutes a cellular phenotype of clinical significance in many cancer types, most prominently colorectal cancers, stomach cancers, endometrial cancers, and ovarian cancers ([Cortes-Ciriano et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/28585546)). We have built a statistical MSI classifier that only considers features of the somatic mutation profile (e.g. _fraction of indels_, _load of indels_, _mutations in MMR genes_ etc.) in order to separate _MSI.H_ (MSI-high) from _MSS_ (MS stable) tumors. 
 
-```{r msi_predicted_status, echo = F, eval = !pcg_report$content$msi$missing_data, results = "asis"}
+The MSI classifier was trained using 999 exome-sequenced TCGA tumor samples with known MSI status (i.e. assayed from mononucleotide markers), and obtained a [positive predictive value](https://en.wikipedia.org/wiki/Positive_and_negative_predictive_values#Positive_predictive_value) of 98.9% and a [negative predictive value](https://en.wikipedia.org/wiki/Positive_and_negative_predictive_values#Negative_predictive_value) of 98.8% on an independent test set of 427 samples. Details of the MSI classification approach can be found <a href="http://rpubs.com/sigven/msi_classification_v3" target="_blank">here</a>.
 
-htmltools::br()
-cat("<ul><li>Predicted MSI status for ",pcg_report$metadata$sample_name,": <b>",  pcg_report[['content']][['msi']][['prediction']][['msi_stats']][['predicted_class']],"</b></li></ul>",sep="\n")
+<br><br>
 
-cat("<h3>Supporting evidence: indel fraction among somatic calls</h3>")
+```{r msi_prep_plots}
+#| echo: false
+#| eval: !expr pcg_report$content$msi$missing_data == FALSE
+#| output: asis
 
-cat("The plot below illustrates the fraction of indels among all calls in <i>",pcg_report$metadata$sample_name,"</i>(black dashed line) along with the distribution of indel fractions for TCGA samples (colorectal, endometrial, ovarian, stomach) with known MSI status assayed from mononucleotide markers ( <i>MSI.H</i> = high microsatellite instability, <i>MSS</i> = microsatellite stable)",sep="\n")
+indel_frac_plot <- pcgrr::msi_indel_fraction_plot(
+  pcg_report[['content']][['msi']][['prediction']][['tcga_dataset']], pcg_report[['content']][['msi']][['prediction']][['msi_stats']][['fracIndels']])
+
+indel_fract_plot_plotly <- plotly::ggplotly(indel_frac_plot)
+indel_fract_plot_plotly$x$layout$legend$title$text <- ""
+
+bslib::page_fillable(
+  bslib::layout_columns(
+    col_widths = c(4,4,4),
+    height = "140px",
+    bslib::value_box(
+      title = "MSI status",
+      value = pcg_report[['content']][['msi']][['prediction']][['msi_stats']][['predicted_class']],
+      showcase = NULL,
+      theme = "dark"
+    ),
+    bslib::value_box(
+      title = "Indel mutational burden",
+      value = paste0(
+        round(pcg_report[['content']][['msi']]$prediction$msi_stats$tmb_indel, 
+              digits = 2), "/Mb"),
+      showcase = NULL,
+      theme = "dark"
+    ),
+    bslib::value_box(
+      title = "Indel fraction - somatic variants",
+      value = if(!is.null(
+        pcg_report[['content']][['msi']]$prediction$msi_stats$indel_frac)){
+          paste0(
+          round(pcg_report[['content']][['msi']]$prediction$msi_stats$indel_frac, 
+                digits = 2))
+      }else{
+        "0"
+      },
+      showcase = NULL,
+      theme = "dark"
+    )
+  ),
+  bslib::card(
+    full_screen = TRUE,
+    height = "350px",
+    bslib::card_header(
+      class = "bg-dark", 
+      paste0("Predictive MSI feature - fraction of indel variants (",
+             pcg_report$settings$sample_id,")")),
+    indel_fract_plot_plotly
+  ),
+  
+  bslib::card(
+    bslib::card_header(
+      class = "bg-dark",
+      paste0("Known somatic mutations in MMR genes (",
+               pcg_report$settings$sample_id,")")
+    ),
+    bslib::card_body(
+      height = 60 + NROW(pcg_report$content$msi$prediction[['mmr_pol_variants']]) * 50,
+      if(NROW(pcg_report$content$msi$prediction[['mmr_pol_variants']]) > 0){
+        DT::datatable(
+          pcg_report$content$msi$prediction[['mmr_pol_variants']],
+          extensions = "Responsive",
+          options = list(
+            pageLength = 8,
+            dom = 'tp'),
+          escape = F)
+      }else{
+        "No somatic mutations found in MMR genes"
+      }
+    )
+  )
+)
+
+
 
 ```
 
-```{r msi_indelfrac_plot, echo = F, fig.width=12, fig.height=6, eval = !pcg_report$content$msi$missing_data}
-htmltools::br()
-p <- pcgrr::msi_indel_fraction_plot(pcg_report[['content']][['msi']][['prediction']][['tcga_dataset']], pcg_report[['content']][['msi']][['prediction']][['msi_stats']][['fracIndels']])
-p
-
-htmltools::br()
-```
-
-
-### Somatic coding mutations in MSI-associated genes
-
-<br>
-```{r msi_gene_variants, echo=F, results='asis', eval = T}
-if(NROW(pcg_report[['content']][['msi']][['prediction']][['mmr_pol_variants']]) > 0){
-  DT::datatable(pcg_report[['content']][['msi']][['prediction']][['mmr_pol_variants']], 
-                escape=F,extensions=c("Buttons","Responsive"),
-                options = list(buttons = c('csv','excel'),dom = 'Bfrtip'))
-}else{
-  cat('<i>No variants found.</i>',sep='\n')
-  cat('\n')
-}
-```
 <br><br>
