--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_overview.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_overview.Rmd
@@ -96,7 +96,7 @@ if(NROW(pcg_report$content$snv_indel$callset$variant_display) > 0){
     !is.na(DP_TUMOR))) > 0 & 
      NROW(dplyr::filter(
        pcg_report$content$snv_indel$callset$variant_display, 
-       !is.na(AF_TUMOR))) > 0){
+       !is.na(VAF_TUMOR))) > 0){
     tumor_af_plot <- T
   }
 }
@@ -201,7 +201,7 @@ vars <- pcg_report$content$snv_indel$callset$variant_display |>
         "VARIANT_CLASS", "TIER", "GENOMIC_CHANGE", 
         "GENOME_VERSION", "ONCOGENICITY", 
         "CALL_CONFIDENCE", "DP_TUMOR", 
-        "AF_TUMOR", "DP_CONTROL", "AF_CONTROL")
+        "VAF_TUMOR", "DP_CONTROL", "AF_CONTROL")
       )) |>
   dplyr::arrange(TIER) |>
   dplyr::mutate(
@@ -229,13 +229,13 @@ if(any(!is.na(vars$CALL_CONFIDENCE))){
     variants_shared, ~CALL_CONFIDENCE)
   i_set1 <- i_set1 + 1
 }
-if(any(!is.na(vars$DP_TUMOR)) & any(!is.na(vars$AF_TUMOR))){
+if(any(!is.na(vars$DP_TUMOR)) & any(!is.na(vars$VAF_TUMOR))){
   filter_set1[[i_set1]] <- crosstalk::filter_slider(
     "DP_TUMOR", "Sequencing depth tumor", 
     variants_shared, ~DP_TUMOR, ticks = F, sep = F)
   filter_set2[[i_set2]] <- crosstalk::filter_slider(
-    "AF_TUMOR", "Allelic fraction tumor", 
-    variants_shared, ~AF_TUMOR, 
+    "VAF_TUMOR", "Allelic fraction tumor", 
+    variants_shared, ~VAF_TUMOR, 
     sep = F, min = 0, max = 1, step = 0.05, ticks = T)
   i_set1 <- i_set1 + 1
   i_set2 <- i_set2 + 1
