--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier1.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier1.Rmd
@@ -75,7 +75,7 @@ Row
 
 <br>
 
-```{r table_browse_tier1, echo=F, results = "asis", eval = pcg_report$content$snv_indel$vstats$n_tier1 > 0}
+```{r table_browse_tier1, echo=F, results = "asis", eval = pcg_report$content$snv_indel$vstats$n_actionability_tier1 > 0}
 
 cat('\nEvidence items associated with variants in tier 1 (right panel) can be filtered according to various criteria:\n')
 
@@ -154,7 +154,7 @@ crosstalk::bscols(
 ```
 
 
-```{r biomarker_note1, echo=F, results = "asis", include = pcg_report$content$snv_indel$vstats$n_tier1 > 0}
+```{r biomarker_note1, echo=F, results = "asis", include = pcg_report$content$snv_indel$vstats$n_actionability_tier1 > 0}
 
 cat('<b>NOTE:</b> Reported biomarkers in CIViC/CGI are mapped at different resolutions (i.e. filter <b>Biomarker resolution</b>). The accuracy of a match between variants in the tumor sample and the reported biomarkers will vary accordingly (highlighted by gene symbols with different color backgrounds):\n\n')
 
@@ -166,7 +166,7 @@ htmltools::br()
 ```
 
 
-```{r tier1_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier1 == 0}
+```{r tier1_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_actionability_tier1 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> variants of strong clinical significance found.</i></font>', sep='\n')
 cat('\n')
 ```
@@ -176,7 +176,7 @@ cat('\n')
 
 <br>
 
-```{r table_tier1, eval = pcg_report$content$snv_indel$vstats$n_tier1 > 0}
+```{r table_tier1, eval = pcg_report$content$snv_indel$vstats$n_actionability_tier1 > 0}
 
 warning_color <- 
   pcgrr::color_palette$warning
@@ -223,7 +223,7 @@ var_eitems_tier1_shared |>
 ```
 
 
-```{r tier1_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier1 == 0}
+```{r tier1_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_actionability_tier1 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> variants of strong clinical significance found.</i></font>',sep='\n')
 cat('\n')
 ```
