--- a/pcgrr/inst/templates/pcgr_quarto_report.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report.qmd
@@ -20,18 +20,21 @@ nocite: |
   @Cortes-Ciriano2017-vl, @Li2017-ew,
   @Blokzijl2018-nc, @Lever2019-xp, 
   @Repana2019-dd, @Chalmers2017-cz, @Yin2020-or, 
-  @Bailey2018-os, @Fernandez2019-mk
+  @Bailey2018-os, @Fernandez2019-mk,
+  @Nakken2018-lb, @Brady2022-hr,
+  @Levatic2022-hk, @Horak2022-uh
 format: 
   html:
     embed-resources: true
     smooth-scroll: true
     page-layout: full
-    fontsize: 0.9em
+    fontsize: 1em
     toc: true
     toc_depth: 2
     grid:
-      body-width: 920px
-css: pcgr_rmarkdown_tumor_control.css
+      body-width: 940px
+css: pcgr_quarto_tumor_control.css
+lightbox: true
 ---
 
 ```{r global_options, include=FALSE}
@@ -39,7 +42,6 @@ css: pcgr_rmarkdown_tumor_control.css
 knitr::opts_chunk$set(echo = F,warning=FALSE, dpi=72, error=F, eval=T)
 
 pcg_report <- readRDS(file="<PCGR_REPORT_OBJECT.rds>")
-#no_content <- !(as.logical(cps_report[['content']][['snv_indel']][['eval']]))
 
 logo_fname_path <- system.file("extdata", "logo.png", package = "pcgrr")
 
@@ -58,10 +60,33 @@ if(as.logical(pcg_report$settings$conf$assay_properties$vcf_tumor_only) == TRUE)
 #| eval: true
 ```
 
+```{r conditional_snv_indel}
+#| child: 'pcgr_quarto_report/snv_indel_main.qmd'
+#| eval: !expr pcg_report$content$snv_indel$eval == TRUE
+```
 
-```{r conditional_msig}
-#| child: 'pcgr_quarto_report/mutational_signature_mp.qmd'
+
+```{r conditional_cna}
+#| child: 'pcgr_quarto_report/cna_main.qmd'
+#| eval: !expr pcg_report$content$cna$eval == TRUE
+```
+
+<br>
+
+```{r conditional_signatures}
+#| child: 'pcgr_quarto_report/mutational_signature.qmd'
 #| eval: !expr pcg_report$settings$conf$somatic_snv$mutational_signatures$run == TRUE &  pcg_report$content$mutational_signatures$missing_data == FALSE
+```
+
+<br>
+
+```{r conditional_msi}
+#| child: 'pcgr_quarto_report/msi.qmd'
+#| eval: !expr pcg_report$settings$conf$somatic_snv$msi$run == 1
+```
+
+```{r documentation}
+#| child: 'pcgr_quarto_report/documentation.qmd'
 ```
 
 ## References
@@ -73,7 +98,7 @@ if(as.logical(pcg_report$settings$conf$assay_properties$vcf_tumor_only) == TRUE)
 #| eval: true
 #| output: asis
 
-cat('<br><br><br>\n\n::: {.callout-important}\n\n<b>MEDICAL DISCLAIMER</b>:<i>The information contained in this cancer genome report is intended for research purposes only. We make no representations or warranties of any kind, expressed or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the sequencing report or the information, products, services, for interpretation or use in clinical practice, or otherwise contained in the report for any purpose. Any reliance you place on information in the report is therefore strictly at your own risk. In no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this genome report.</i><br>\n\n:::')
+cat('<br><br><br>\n\n::: {.callout-important}\n## Medical Disclaimer\n\n<i>The information contained in this cancer genome report is intended for research purposes only. We make no representations or warranties of any kind, expressed or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the sequencing report or the information, products, services, for interpretation or use in clinical practice, or otherwise contained in the report for any purpose. Any reliance you place on information in the report is therefore strictly at your own risk. In no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this genome report.</i><br>\n\n:::')
 
 ```
 
