--- a/pcgrr/inst/templates/pcgr_quarto_report/documentation.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/documentation.qmd
@@ -1,157 +1,127 @@
 ## Documentation
 
-### Annotation resources
+This report is intended for interpretation of acquired genomic aberrations  detected in human tumor samples, as detected from high-throughput sequencing
+technologies.
 
-The analysis performed in the cancer genome report is based on the following underlying tools and knowledge resources:
+<br><br>
+
+::: {.panel-tabset}
+
+### Gene/variant annotation resources
+
+The variant interpretation procedures performed in this cancer genome report are relying upon multiple tools and knowledge resources, as outlined below. 
+
+::: {.callout-important}
+## Licensing note
+
+Some resources (highlighted below) demand specific licensing agreements if you plan to utilize their data (and thus this report) in a commercial, non-research setting.
+:::
+
 
 * __PCGR databundle version__
 
-  * __`r pcg_report$metadata$pcgr_db_release$bundle_version$version`__
-
-* __Software__ 
-```{r list_software, echo=F,results='asis'}
-for(n in names(pcg_report$metadata$pcgr_db_release)){
-  if(n == 'mosdepth' | n == 'bundle_version'){
-    next
-  }
-  if(pcg_report$metadata$pcgr_db_release[[n]]$resource_type == 'software'){
-    s <- paste0('    * [',pcg_report$metadata$pcgr_db_release[[n]]$name,'](',pcg_report$metadata$pcgr_db_release[[n]]$url,') - ',pcg_report$metadata$pcgr_db_release[[n]]$description, ' (',pcg_report$metadata$pcgr_db_release[[n]]$version,')')
-    cat(s,sep="\n")
-  }
-}
-
-```
-<br><br>
+  * __`r pcg_report$settings$reference_data$version`__
 
 * __Databases/datasets__ 
-```{r list_db, echo=F,results='asis'}
-for(n in names(pcg_report$metadata$pcgr_db_release)){
-  if(pcg_report$metadata$pcgr_db_release[[n]]$resource_type == 'db' & n != 'gwas' & n != 'ct' & n != 'bundle_version'){
-    s <- paste0('    * [',pcg_report$metadata$pcgr_db_release[[n]]$name,'](',pcg_report$metadata$pcgr_db_release[[n]]$url,') - ',pcg_report$metadata$pcgr_db_release[[n]]$description, ' (',pcg_report$metadata$pcgr_db_release[[n]]$version,')')
-    cat(s,sep="\n")
+```{r list_db}
+#| echo: false
+#| output: asis
+
+i <- 1
+ref_datasets <- pcg_report$settings$reference_data$source_metadata
+for(i in 1:NROW(ref_datasets)){
+  source_full <- ref_datasets[i,"source"]
+  source <- ref_datasets[i,"source_abbreviation"]
+  description <- ref_datasets[i,"source_description"]
+  url <- ref_datasets[i,"source_url"]
+  version <- ref_datasets[i,"source_version"]
+  license <- ref_datasets[i, "source_license"]
+  license_url <- ref_datasets[i, "source_license_url"]
+  
+  ## temporary fix for outdated ACMG URL (geneOncoX needs update):
+  if(source == "acmg_sf"){
+    url <- "https://pubmed.ncbi.nlm.nih.gov/37347242/"
+  }
+  wflow <- ref_datasets[i, "wflow"]
+  if(!(stringr::str_detect(
+    wflow,"pcgr"))){
+    next
+  }
+  
+  s <- ""
+  if(is.na(version)){
+    if(!is.na(license_url)){
+      s <- paste0("    * [", source_full, "](", url, ") - ", description, " - [",
+                  license,"](", license_url, ")")
+    }else{
+      s <- paste0("    * [", source_full, "](", url, ") - ", description, " - ",
+                  license)
+    }
+  }else{
+    if(!is.na(license_url)){
+      if(source == "cgc" | source == "gepa"){
+        s <- paste0("    * [", source_full, "](", url, ") - ", description, " (<b>", version, "</b>)",
+                    " - <b>[", license,"](", license_url, ")</b>")
+      }else{
+        s <- paste0("    * [", source_full, "](", url, ") - ", description, " (<b>", version, "</b>)",
+                    " - [", license,"](", license_url, ")")
+      }
+    }else{
+       s <- paste0("    * [", source_full, "](", url, ") - ", description, " (<b>", version, "</b>)",
+                  " - ", license)
+    }
+  }
+  if(s != ""){
+    cat(s, sep = "\n")
   }
 }
 
 ```
-
 
 ### Report content
 
-<br>
+#### Actionability classificaton
 
-#### SNVs/InDels
+Clinical actionability assessment of SNVs/InDels and gene copy number aberrations found in the tumor sample follows recommendation guidelines by ACMG/AMP [@Li2017-ew]. Specifically, different levels  of actionability are implemented in the following manner:
 
-The prioritization of SNV and InDels found in the tumor sample is done according to a four-tiered structure, adopting the joint consensus recommendation by AMP/ACMG [Li et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/27993330).
-
-- **TIER 1: Variants of strong clinical significance** - constitutes variants linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are
+- **TIER 1: Variants of strong clinical significance** - constitutes aberrations linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are
 	 - Found within the same tumor type/class as specified by the user, **AND**
 	 - Of strong clinical evidence (i.e. part of guidelines, validated or discovered in late clinical trials ([CIViC evidence levels A/B](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))
 	 - overlap between variants in the tumor sample and reported biomarkers must occur at the _exact variant level_ or at the _codon/exon level_
 	 
- - **TIER 2: Variants of potential clinical significance** - constitutes other variants linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are either
+ - **TIER 2: Variants of potential clinical significance** - constitutes other aberrations linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are either
 	 - Of strong clinical evidence in other tumor types/classes than the one specified by the user, **OR**
 	 - Of weak clinical evidence (early trials, case reports etc. ([CIViC evidence levels C/D/E](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))) in the same tumor type/class as specified by the user
 	 - overlap between variants in the tumor sample and reported biomarkers must occur at the _exact variant level_ or at the _codon/exon level_
 	 
- - **TIER 3: Variants of uncertain clinical significance** - includes other coding variants found in oncogenes or tumor suppressor genes
-   - Status as oncogenes and/or tumor suppressors genes are done according to the following scheme in PCGR:
-     - Five or more publications in the biomedical literature that suggests an oncogenic/tumor suppressor role for a given gene (as collected from the [CancerMine text-mining resource](http://bionlp.bcgsc.ca/cancermine/)), **OR**
-     - At least two publications from CancerMine that suggests an oncogenic/tumor suppressor role for a given gene **AND** an existing record for the same gene as a tumor suppressor/oncogene in the [Network of Cancer Genes (NCG)](http://ncg.kcl.ac.uk/)
-     - Status as oncogene is ignored if a given gene has three times as much (literature evidence) support for a role as a tumor suppressor gene (and vice versa)
-     - Oncogenes/tumor suppressor candidates from CancerMine/NCG that are found in the [curated list of false positive cancer drivers compiled by Bailey et al. (Cell, 2018)](https://www.ncbi.nlm.nih.gov/pubmed/30096302) have been excluded
-     
- - **TIER 4** - includes other protein-coding variants
-     - <i>Protein-coding</i> refers here to variants with the following consequences: 
-      - missense_variant
-      - stop_gain/stop_loss
-      - frameshift_variant
-      - inframe_insertions/inframe_deletions
-      - splice_donor_variant/splice_acceptor_variant
-      - start_loss
- - **NONCODING** - includes other non-(protein)coding variants
- 
-A complete list of reported biomarkers that associate with variants in the tumor sample (not necessarily qualifying for assignment to TIER 1/TIER 2) is also shown in a separate section.
-
+ - **TIER 3: Variants of uncertain clinical significance** -
+   - For SNVs/InDels, this includes other coding variants found in oncogenes or tumor suppressor genes, yet _not_ linked to any known predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers)
+   
 <br>
 
-#### Somatic copy number aberrations
+#### Oncogenicity classification
 
-Somatic copy number aberrations identified in the tumor sample are classified into **two main tiers**:
+[@Horak2022-uh]
 
-- **TIER 1: Aberrations of strong clinical significance** - constitutes amplified/lost genes linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are
-	 - Found within the same tumor type/class as specified by the user, **AND**
-	 - Of strong clinical evidence (i.e. part of guidelines, validated or discovered in late clinical trials ([CIViC evidence levels A/B](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))
-	 	 
-- **TIER 2: Aberrations of potential clinical significance** - constitutes amplified/lost genes linked to predictive, prognostic, or diagnostic biomarkers in the [CIViC database](http://civic.genome.wustl.edu) and the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are either
-	 - Of strong clinical evidence in other tumor types/classes than the one specified by the user, **OR**
-	 - Of weak clinical evidence (early trials, case reports etc. ([CIViC evidence levels C/D/E](https://civic.readthedocs.io/en/latest/model/evidence/level.html)))) in the same tumor type/class as specified by the user
-	 
 Included in the report is also a complete list of **all oncogenes subject to amplifications**, **tumor suppressor genes subject to homozygous deletions**, and **other drug targets subject to amplifications**
 
 <br>
 
 #### Mutational signatures
 
-The set of somatic mutations observed in a tumor reflects the varied mutational processes that have been active during its life history, providing insights into the routes taken to carcinogenesis. Exogenous mutagens, such as tobacco smoke and ultraviolet light, and endogenous processes, such as APOBEC enzymatic family functional activity or DNA mismatch repair deficiency, result in characteristic patterns of mutation. Mutational signatures can have significant clinical impact in certain tumor types ([Póti et al., 2019](https://www.ncbi.nlm.nih.gov/pubmed/31727117), [Ma et al., 2018](https://www.ncbi.nlm.nih.gov/pubmed/30120226))
+The set of somatic mutations observed in a tumor reflects the varied mutational processes that have been active during its life history, providing insights into the routes taken to carcinogenesis. Exogenous mutagens, such as tobacco smoke and ultraviolet light, and endogenous processes, such as APOBEC enzymatic family functional activity or DNA mismatch repair deficiency, result in characteristic patterns of mutation. There is growing evidence that mutational signatures can explain therapeutic response [@Brady2022-hr; @Levatic2022-hk].
 
-The **MutationalPatterns** package ([Blokzijl et al., 2018](https://www.ncbi.nlm.nih.gov/pubmed/29695279)) is used to estimate the relative contribution of known mutational signatures in a single tumor sample. [MutationalPatterns](https://github.com/UMCUGenetics/MutationalPatterns) makes an optimal reconstruction of the mutations observed in a given sample with [COSMIC's (V3.2) reference collection of n = 78 mutational signatures (SBS, including sequencing artefacts)](https://cancer.sanger.ac.uk/signatures/sbs/). By default, we restrict the signatures in the reference collection to those already observed in the tumor type in question (i.e. from large-scale <i>de novo</i> signature extraction on ICGC-PCAWG tumor samples). 
-
-```{r results = "asis", eval = pcg_report$content$mutational_signatures$eval == T & !pcg_report$content$mutational_signatures$missing_data}
-
-cat("Specifically, for tumors of type <b>", pcg_report$metadata$config$t_props$tumor_type,"</b>, mutational signature reconstruction is limited to the following reference collection:",sep="")
-
-dat <- pcg_report$content$mutational_signatures$result$reference_data
-if("signature_id" %in% colnames(dat) & "aetiology_keyword" %in% colnames(dat) & NROW(dat) > 0){
-  cat('<ul>')
-  i <- 1
-  refsig_collection_site <- pcg_report$content$mutational_signatures$result$reference_data |>
-    dplyr::mutate(tmp_id = as.numeric(
-      stringr::str_replace(
-        stringr::str_replace(
-          stringr::str_replace(
-            stringr::str_replace(
-              stringr::str_replace(signature_id,"SBS",""),
-              "a",".2"),
-            "b",".4"),
-          "c", ".6"),
-        "d",".8"))) |>
-    dplyr::arrange(tmp_id) |>
-    dplyr::select(signature_id, aetiology_keyword) |>
-    dplyr::distinct()
-  
-  while(i <= nrow(refsig_collection_site)){
-    cat(paste0("<li><b>",refsig_collection_site[i,]$signature_id, "</b> - ", refsig_collection_site[i,]$aetiology_keyword),'</li>\n')
-    i <- i + 1
-  }
-  cat('</ul>')
-}
-
-if(pcg_report$metadata$config$msigs$all_reference_signatures == T){
-  cat("<b><NOTE>:</b> Option '--all_reference_signatures' have been applied for this query, which means that all reference signatures (n = 67) have been considered during optimal reconstruction of the mutational profile with reference signatures",sep="\n")
-}
-
-if(pcg_report$metadata$config$msigs$include_artefact_signatures == T){
-  cat("<b>NOTE:</b> Option <i>'--all_reference_signatures'</i> have been applied for this query, which means that all reference signatures (n = 67) have been considered during optimal reconstruction of the mutational profile with reference signatures",sep="\n")
-}
-```   
-
-```{r results = "asis", eval = pcg_report$metadata$config$msigs$run == T & pcg_report$content$mutational_signatures$missing_data}
-cat("<b>NOTE</b>: This sample contains too few variants for estimation of mutational signature contributions",sep="\n")
-```
-```{r results = "asis", eval = pcg_report$metadata$config$msigs$run == T & !pcg_report$content$mutational_signatures$missing_data}
-cat("The accuracy of signature fitting reflects how well the mutational profile can be reconstructed with signatures from the reference collection. Reconstructions with fitting accuracy below 90% should be interpreted with caution.",sep="\n")
-```
-
-<br>
+In PCGR, we apply the **MutationalPatterns** package [@Blokzijl2018-nc] to identify the contribution of _known mutational signatures_ in a single tumor sample. Specifically, we apply [MutationalPatterns](https://github.com/UMCUGenetics/MutationalPatterns) to optimally reconstruct the observed spectrum of mutations through a [reference collection of known mutational signatures](https://www.ncbi.nlm.nih.gov/pubmed/32025018). By default, we restrict the signatures in the reference collection to those already observed in the tumor type in question (i.e. from large-scale <i>de novo</i> signature extraction on ICGC tumor samples). 
 
 #### Tumor mutational burden (TMB)
 
-Tumor mutational load or mutational burden is a measure of the number of mutations within a tumor genome, defined as the total number of mutations per coding area of a tumour genome. TMB may serve as a proxy for determining the number of neoantigens per tumor, which in turn may have implications for response to immunotherapy. For estimation of TMB, PCGR employs two different algorithms (one to be chosen by the user):
+Tumor mutational load or mutational burden is a measure of the number of mutations within a tumor genome, defined as the total number of mutations per coding area of a tumour genome. TMB may serve as a proxy for determining the number of neoantigens per tumor, which in turn may have implications for response to immunotherapy. PCGR estimates TMB according to three different schemes (one to be chosen as displayed in the report):
 
-  1) __all_coding__: the same approach as was outlined in a recently published large-scale study of TMB ([Chalmers et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/28420421)), i.e. counting all somatic base substitutions and indels in the protein-coding regions of the sequencing assay, including synonymous alterations. 
-  2) __nonsyn__: non-synonymous variants only, i.e. as employed by [Fernandez et al., 2019](https://www.ncbi.nlm.nih.gov/pubmed/31475242)
+  1) __TMB_coding_silent__: the same approach as was outlined in a large-scale study of TMB ([Chalmers et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/28420421)), i.e. counting all somatic base substitutions and indels in the protein-coding regions of the sequencing assay, including those at canonical splice sites, and including synonymous alterations. 
+  2) __TMB_coding_non_silent__: counting all somatic base substitutions and indels in the protein-coding regions of the sequencing assay, including those at canonical splice sites, but excluding synonymous alterations.
+  3) __TMB_missense_only__: missense (non-synonymous) variants variants only, i.e. as employed by [Fernandez et al., 2019](https://www.ncbi.nlm.nih.gov/pubmed/31475242)
 
-Numbers obtained with 1) or 2) are next divided by the coding target size of the sequencing assay.
+Numbers obtained with 1), 2) or 3) are next divided by the coding target size of the sequencing assay.
 
 <br>
 
@@ -191,3 +161,5 @@ Each report is provided with a list of trials for the tumor type in question, wh
 Note that the trials have currently not been subject to any matching with respect to the molecular profile of the tumor, trials are thus basically unprioritized, and have to be explored interactively by the user in order to discover relevant trials. 
 
 <br>
+
+:::
